--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@ spec:
   listeners:
     - name: listener_0
       address: 0.0.0.0
-      port: 9000
+      port: 8083
       sni:
         - server_names:
             - "*.example.com"
@@ -15,6 +15,19 @@ spec:
               prefix: /
               clusters:
                 - echo
+    - name: listener_1
+      address: 0.0.0.0
+      port: 8081
+      sni:
+        - server_names:
+            - "test.example.com"
+          secret_names:
+            - example_com
+          routes:
+            - name: test_route
+              prefix: /
+              clusters:
+                - test
   clusters:
     - name: echo
       endpoints:
@@ -22,6 +35,10 @@ spec:
           port: 9101
         - address: 127.0.0.1
           port: 9102
+    - name: test
+      endpoints:
+        - address: 127.0.0.1
+          port: 9100
   secrets:
     - name: example_com
       private_key_file: "certs/envoy-proxy-server.key"
